--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,10 @@
 
   </head>
   <body ng-app="starter">
-
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>  
     <ion-nav-view></ion-nav-vew>
   </body>
 </html>
